src/main/java/com/example/fas/exceptions/user/invalid/ProviderIdInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class ProviderIdInvalidException extends RuntimeException {
    public ProviderIdInvalidException(String message) {
        super(message);
    }
}
